# by-latinizer

./: CMakeLists.txt  README.md
src/: maincyrlat.cpp  mainlatcyr.cpp
src/code/: cyrlat.cpp  input.cpp  latcyr.cpp  unicode.cpp
src/headers/: cyrlat.hpp  input.hpp  latcyr.hpp  unicode.hpp
